<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="video" tools:ignore="MissingTranslation">Videos educativos</string>
    <string name="videouno">Drhelp! Prueba Piloto en puerto Tejada, Cauca</string>
    <string name="videodos">Drhelp! Aporta a la solución de la problemática del sector Salud</string>
    <string name="videotres">Drhelp! Proyecto por una MEJOR SALUD en Colombia</string>
    <string name="cliente">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">to register</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="action_sign_out" tools:ignore="ExtraTranslation">Sign off</string>
    <string name="action_registre">Registrar</string>
    <string name="action_torre">Escriba la Torre</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_login">LOGIN</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="auth_failed_signup">Authentication failed.</string>
    <string name="auth_failed_success">Authentication Success.</string>
    <string name="auth_password">We have sent you instructions to reset your password!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="demo">Demo</string>
    <string name="invalid_email">Esta direccion de email esta invalida</string>
    <string name="invalidadTore">Asignacion de Torre Invalidad</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="incorrect_email">Email Incorrecto</string>
    <string name="field_required">Este Campo es Requerido</string>
    <string name="username">Usuario</string>
    <string name="grupo">Escriba la Torre</string>
    <string name="number">Numero</string>
    <string name="password">Password</string>
    <string name="title_activity_chat">Chat</string>
    <string name="app_name">Dr Help</string>
    <string name="action_settings">Cerrar Sesion</string>
    <string name="aRegistro">Register</string>
    <string name="aID">ID</string>
    <string name="apEnviar">SEND</string>
    <string name="action_settings_video">Configuracion Video</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_loading">Please Wait</string>
    <string name="msg_loading">Loading movies list…</string>
    <string name="appLongitud">Longitud</string>
    <string name="appLatitud">Latitud</string>
    <string name="action_search">Publicidad</string>
    <string name="action_record">Record Video</string>
    <string name="action_save">Save</string>
    <string name="action_label">Add Label</string>
    <string name="action_play">Play Video</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="default_text">--</string>
    <string name="hello">Hello World, AccelerometerDriverV2Activity!</string>
    <string name="show">Mostrar</string>
    <string name="disconnect_call">Colgar la Video llamada</string>
    <string name="room_names">Nombre de la Sala:</string>
    <string name="room_description">
     Para realizar una consulta virtual, escoja un médico disponible y se iniciara la video llamada.
    </string>
    <string name="disponibilidad">Cargos disponibles</string>
    <string name="room_descriptionprueba">
     Escoja la lista  y se iniciara la video llamada.
    </string>
    <string name="room_bienvenidad">Welcome</string>
    <string name="connect_text">Connect</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="add_room_description">Add new room to the list</string>
    <string name="remove_room_description">Remove room from the list</string>
    <string name="connect_description">Connect to the room</string>
    <string name="connect_loopback_description">Loopback connection</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
    <string name="pref_startvideobitrate_title">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_dlg">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_default">Default</string>
    <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
    <string name="pref_startvideobitratevalue_title">Video encoder start bitrate.</string>
    <string name="pref_startvideobitratevalue_dlg">Enter video encoder start bitrate in kbps.</string>
    <string name="pref_startvideobitratevalue_default">1000</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="pref_audiosettings_key">audio_settings_key</string>
    <string name="pref_audiosettings_title">WebRTC audio settings.</string>
    <string name="pref_startaudiobitrate_key">startaudiobitrate_preference</string>
    <string name="pref_startaudiobitrate_title">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_dlg">Audio bitrate setting.</string>
    <string name="pref_startaudiobitrate_default">Default</string>
    <string name="pref_startaudiobitratevalue_key">startaudiobitratevalue_preference</string>
    <string name="pref_startaudiobitratevalue_title">Audio codec bitrate.</string>
    <string name="pref_startaudiobitratevalue_dlg">Enter audio codec bitrate in kbps.</string>
    <string name="pref_startaudiobitratevalue_default">32</string>
    <string name="pref_audiocodec_key">audiocodec_preference</string>
    <string name="pref_audiocodec_title">Default audio codec.</string>
    <string name="pref_audiocodec_dlg">Select default audio codec.</string>
    <string name="pref_audiocodec_default">OPUS</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_title">Disable audio processing.</string>
    <string name="pref_noaudioprocessing_dlg">Disable audio processing pipeline.</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_aecdump_key">aecdump_preference</string>
    <string name="pref_aecdump_title">Create aecdump.</string>
    <string name="pref_aecdump_dlg">Enable diagnostic audio recordings.</string>
    <string name="pref_aecdump_default">false</string>
    <string name="aNombre">Name</string>
    <string name="aCorreo">Email</string>
    <string name="apAcepto">Accept the terms, conditions and privacy policies</string>
    <string name="apContra">Password</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_title">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_dlg">Use OpenSL ES for audio playback.</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_miscsettings_key">misc_settings_key</string>
    <string name="pref_miscsettings_title">Miscellaneous settings.</string>
    <string name="pref_room_server_url_key">room_server_url_preference</string>
    <string name="pref_room_server_url_title">Room server URL.</string>
    <string name="pref_room_server_url_dlg">Enter a room server URL.</string>
    <string name="pref_room_server_url_default" translatable="false">https://appr.tc</string>
    <string name="pref_displayhud_key">displayhud_preference</string>
    <string name="pref_displayhud_title">Display call statistics.</string>
    <string name="pref_displayhud_dlg">Display call statistics.</string>
    <string name="pref_displayhud_default" translatable="false">false</string>
    <string name="pref_tracing_key">tracing_preference</string>
    <string name="pref_tracing_title">Debug performance tracing.</string>
    <string name="pref_tracing_dlg">Debug performance tracing.</string>
    <string name="pref_tracing_default" translatable="false">false</string>
    <string name="settings_name">Archivo</string>
    <string name="botonconculta">Consult a Doctor</string>
    <string name="apBotomHistoriaClinica">Medical Record</string>
    <string name="apExamenes">Laboratory Tests</string>
    <string name="apCitasMedicas">Book an Appointment</string>
    <string name="apCuidaSalud">Take Care of Your Health</string>
    <string name="apConsulta">Consult</string>
    <string name="apDrugstores">Drugstores</string>
    <string name="apBienvenido">Welcome</string>
    <string name="email">Email</string>
    <string name="serviciocat">Service</string>
    <string name="hint_id">ID</string>
    <string name="hint_email">Email</string>
    <string name="beneficiaryaddress">Address</string>
    <string name="beneficiarycountry">Country</string>
    <string name="register_benef">Register Beneficiary</string>
    <string name="show_list_benef">List of Registered Beneficiary</string>
    <string name="hint_name">Name</string>
</resources>