<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="#FFFFFF"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:weightSum="1">


    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="fill_parent"
        android:layout_height="446dp"
        android:gravity="center_vertical|center_horizontal">
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:visibility="gone" />


        <ScrollView

            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout

                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#2582C5"
                android:orientation="vertical"
                >





                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="#e8e8e7"
                    android:orientation="horizontal"
                    android:layout_alignParentTop="true">


                    <ImageView android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_launchert"
                        android:layout_marginLeft="10dp"/>

                    <TextView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/aRegistro"
                        android:textColor="#2582C5"
                        android:layout_marginLeft="25dp"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_gravity="center_horizontal|center_vertical"/>


                </LinearLayout>


                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="30dp"
                    android:orientation="vertical"
                    android:background="@drawable/greybackground"
                    >




                    <EditText android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:hint="@string/aID"
                        android:id="@+id/txtdocumento"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:autoText="false"
                        android:background="#f3f3f3"
                        android:textColor="#2582C5" />

                    <EditText android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:hint="@string/aNombre"
                        android:id="@+id/txtnombre"
                        android:background="#f3f3f3"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="15dp"/>

                    <EditText android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:hint="@string/aCorreo"
                        android:id="@+id/txtemail"
                        android:background="#f3f3f3"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="15dp"/>

                    <EditText android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:hint="@string/apContra"
                        android:id="@+id/txtpassword"
                        android:background="#f3f3f3"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="15dp"/>

                    <EditText android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:hint=" "
                        android:id="@+id/txtespacio"
                        android:background="#f3f3f3"
                        android:paddingLeft="5dp"
                        android:layout_marginTop="15dp"/>
                    <RadioButton
                        android:text="@string/apAcepto"
                        android:background="#f3f3f3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton"
                        android:duplicateParentState="false"
                        tools:layout_margin="@dimen/cardview_compat_inset_shadow" />

                    <Button android:layout_width="190dp"
                        android:layout_height="38dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/apEnviar"
                        android:id="@+id/enviar"
                        android:textColor="#fff"
                        android:onClick="sendMessage"
                        android:background="@drawable/btn"/>

                </LinearLayout>

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >




                </LinearLayout>


            </LinearLayout>



        </ScrollView>




    </LinearLayout>


</LinearLayout>